; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_ringbuf/extr_ringbuf.c_xRingbufferReceiveFromISR.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_ringbuf/extr_ringbuf.c_xRingbufferReceiveFromISR.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pdTRUE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xRingbufferReceiveFromISR(i64 %0, i64* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  %9 = load i64, i64* %4, align 8
  %10 = inttoptr i64 %9 to i32*
  store i32* %10, i32** %6, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = call i32 @configASSERT(i32* %11)
  %13 = load i32*, i32** %6, align 8
  %14 = call i64 @prvReceiveGenericFromISR(i32* %13, i8** %7, i32* null, i64* %8, i32* null, i32 0)
  %15 = load i64, i64* @pdTRUE, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %25

17:                                               ; preds = %2
  %18 = load i64*, i64** %5, align 8
  %19 = icmp ne i64* %18, null
  br i1 %19, label %20, label %23

20:                                               ; preds = %17
  %21 = load i64, i64* %8, align 8
  %22 = load i64*, i64** %5, align 8
  store i64 %21, i64* %22, align 8
  br label %23

23:                                               ; preds = %20, %17
  %24 = load i8*, i8** %7, align 8
  store i8* %24, i8** %3, align 8
  br label %26

25:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %26

26:                                               ; preds = %25, %23
  %27 = load i8*, i8** %3, align 8
  ret i8* %27
}

declare dso_local i32 @configASSERT(i32*) #1

declare dso_local i64 @prvReceiveGenericFromISR(i32*, i8**, i32*, i64*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
